test/corpus/expressions.txt
==================
variable
==================

<html>
  {{ variable }}
  {{ variable.item1.item2 }}
  {{ variable|filter }}
  {{ variable|filter:argument }}
  {{ variable|filter:argument.item1.item2 }}
  {{ variable|filter:"quoted argument" }}
  {{ variable|filter:"quoted argument, with non-word characters!" }}
  {{ variable|filter|filter:argument|filter:"quoted argument" }}
</html>

---

(template
  (content)
  (variable
    (variable_name))
  (variable
    (variable_name))
  (variable
    (variable_name)
    (filter
      (filter_name)))
  (variable
    (variable_name)
    (filter
      (filter_name)
      (filter_argument)))
  (variable
    (variable_name)
    (filter
      (filter_name)
      (filter_argument)))
  (variable
    (variable_name)
    (filter
      (filter_name)
      (filter_argument)))
  (variable
    (variable_name)
    (filter
      (filter_name)
      (filter_argument)))
  (variable
    (variable_name)
    (filter
      (filter_name))
    (filter
      (filter_name)
      (filter_argument))
    (filter
      (filter_name)
      (filter_argument)))
  (content))

==================
string
==================

<html>
  {{ "string" }}
  {{ 'string' }}
  {{ "string"|filter }}
  {{ 'string'|filter }}
  {{ "string"|filter:argument }}
  {{ 'string'|filter:argument }}
  {{ "string"|filter:argument.item1.item2 }}
  {{ 'string'|filter:argument.item1.item2 }}
  {{ "string"|filter:"quoted argument" }}
  {{ 'string'|filter:'quoted argument' }}
  {{ "string"|filter:"quoted argument, with non-word characters!" }}
  {{ 'string'|filter:'quoted argument, with non-word characters!' }}
  {{ "string"|filter|filter:argument|filter:"quoted argument" }}
  {{ 'string'|filter|filter:argument|filter:'quoted argument' }}
</html>

---

(template
  (content)
  (string)
  (string)
  (string
    (filter
      (filter_name)))
  (string
    (filter
      (filter_name)))
  (string
    (filter
      (filter_name)
      (filter_argument)))
  (string
    (filter
      (filter_name)
      (filter_argument)))
  (string
    (filter
      (filter_name)
      (filter_argument)))
  (string
    (filter
      (filter_name)
      (filter_argument)))
  (string
    (filter
      (filter_name)
      (filter_argument)))
  (string
    (filter
      (filter_name)
      (filter_argument)))
  (string
    (filter
      (filter_name)
      (filter_argument)))
  (string
    (filter
      (filter_name)
      (filter_argument)))
  (string
    (filter
      (filter_name))
    (filter
      (filter_name)
      (filter_argument))
    (filter
      (filter_name)
      (filter_argument)))
  (string
    (filter
      (filter_name))
    (filter
      (filter_name)
      (filter_argument))
    (filter
      (filter_name)
      (filter_argument)))
  (content))

==================
translated filter argument
==================

<div>
  <span class="w-editing-sessions__name">
    {{ session.user|user_display_name|default:_("System") }}
  </span>
</div>

---

(template
  (content)
  (variable
    (variable_name)
    (filter
      (filter_name))
    (filter
      (filter_name)
      (filter_argument)))
  (content))
